--- a/FoodLab/Base.lproj/Main.storyboard
+++ b/FoodLab/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -45,33 +46,44 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="XtD-c0-Cd2">
-                                    <size key="itemSize" width="200" height="200"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="XtD-c0-Cd2">
+                                    <size key="itemSize" width="312" height="231"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="RecipeCell" id="tS7-NA-ou6" customClass="RecipeCell" customModule="FoodLab" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                                        <rect key="frame" x="51" y="0.0" width="312" height="231"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="312" height="231"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="K7S-w9-lKL">
-                                                    <rect key="frame" x="0.0" y="0.0" width="200" height="171"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="K7S-w9-lKL">
+                                                    <rect key="frame" x="0.0" y="0.0" width="312" height="231"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yc8-QM-Js8">
-                                                    <rect key="frame" x="12" y="179" width="177" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yc8-QM-Js8">
+                                                    <rect key="frame" x="0.0" y="175" width="312" height="30"/>
+                                                    <color key="backgroundColor" red="0.91374524111675126" green="0.83055016343208443" blue="0.90837841456018353" alpha="0.8868257705479452" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="28" id="COn-tb-II1"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" weight="thin" pointSize="16"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.80244006849315064" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                         </view>
+                                        <constraints>
+                                            <constraint firstItem="K7S-w9-lKL" firstAttribute="top" secondItem="tS7-NA-ou6" secondAttribute="top" id="7ag-Q6-1Vs"/>
+                                            <constraint firstItem="K7S-w9-lKL" firstAttribute="leading" secondItem="tS7-NA-ou6" secondAttribute="leading" id="GAO-LB-lNq"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="Yc8-QM-Js8" secondAttribute="bottom" constant="4" id="OhY-gT-eDe"/>
+                                            <constraint firstItem="K7S-w9-lKL" firstAttribute="trailing" secondItem="Yc8-QM-Js8" secondAttribute="trailing" id="OvW-vo-Q37"/>
+                                            <constraint firstAttribute="bottom" secondItem="K7S-w9-lKL" secondAttribute="bottom" id="jvT-2g-hRI"/>
+                                            <constraint firstAttribute="trailing" secondItem="K7S-w9-lKL" secondAttribute="trailing" id="phI-G3-zPD"/>
+                                            <constraint firstItem="K7S-w9-lKL" firstAttribute="leading" secondItem="Yc8-QM-Js8" secondAttribute="leading" id="xzS-FF-WFL"/>
+                                        </constraints>
                                         <connections>
                                             <outlet property="recipeTitle" destination="Yc8-QM-Js8" id="GTG-6O-tu9"/>
                                             <outlet property="recipieImageView" destination="K7S-w9-lKL" id="DEh-yx-dQR"/>
